@@ -1,6 +1,10 @@
 1.3.9 (SVN/unreleased)
 ======================
 
+ * Fixed setting of cache headers when the registry is associated with a
+   RAMCache.
+   [fschulze]
+
 1.3.8
 =====
 
